[FIX] web: fix optional fields invisible overflow
Before this commit, the "renderer with search panel" have a max-height
of 100% but no min-height. Because of this, it is possible that the
list view optinal fields dropdown would be smaller than the "renderer
with search panel" container. Since this particular container has to
be in overflow: auto (see the comment on the line above the change),
it hides the overflow of the optional fields dropdown.

This commit sets the height of the "renderer with search panel"
container to 100% such that it does not truncate the optional fields
dropdown. The bug was observed on the General Ledger menu of Accounting,
and the change does not look to change anything other than correctly
displaying the optional fields dropdown without truncating it.

--- a/addons/web/static/src/scss/search_panel.scss
+++ b/addons/web/static/src/scss/search_panel.scss
@@ -14,7 +14,7 @@ $o-searchpanel-filter-default-color: #D59244;
     .o_renderer_with_searchpanel {
         flex: 1 1 100%;
         overflow: auto; // make the renderer and search panel scroll individually
-        max-height: 100%;
+        height: 100%;
     }
     .o_search_panel {
         flex: 0 0 220px;
